<resources>
    <string name="app_name">SlapChat</string>
    <string name="hint_email">Enter your email address</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_connections">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="title_login">Login</string>
    <string name="title_settings">Settings</string>
    <string name="title_change">Change Password</string>
    <string name="title_chat_rooms">Chat Rooms</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>

    <string name="action_register">Register</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_verify_code">An Email has been sent to the provided address with a verification link.</string>
    <string name="action_return_home">Return Home</string>
    <string name="hint_enter_message">Enter Message</string>
    <string name="hint_enter_pass">Enter your current password</string>
    <string name="hint_enter_new_pass">Enter your new password</string>
    <string name="hint_retype_new_pass">Retype your new password</string>
    <string name="action_change">Change</string>
    <string name="action_change_pass">Change Password</string>
    <string name="action_forgot">Forgot Your Password?</string>
    <string name="hint_need_account">Need an Account?</string>

    <string name="action_search">Search</string>
    <string name="header_daily">Daily</string>
    <string name="header_hourly">Hourly</string>

    <string name="text_description">Description</string>
    <string name="hint_enter_zipcode">Enter Zipcode</string>
    <string name="hint_enter_lat">Latitude</string>
    <string name="hint_enter_lon">Longitude</string>

    <string name="send_message">Send Message</string>
    <string name="unfriend">Unfriend</string>

    <string name="action_submit">Submit</string>
    <string name="hint_forgot_verify">We have sent a link to the email provided, please clink the link to progress.</string>
    <string name="action_forgot_resend">Resend Email</string>
    <string name="action_forgot_clicked">I have clicked the link</string>


    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="switch_log_in">Stay Logged in</string>

    <string name="action_add_user">Add user</string>
    <string name="action_add">Add</string>
    <string name="hint_enter_name">Enter the chat name</string>
    <string name="hint_user_in_chat">User in chat</string>
    <string name="title_add_chat">Add Chat</string>
    <string name="title_add_user">Add Users</string>


    <string name="GOOGLE_MAPS_API_KEY">AIzaSyDfBe1Rhu6_zwuZwzVSTmphUu0Qk9lpylI</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="title_map">Map</string>
    <string name="title_locations">Saved Locations</string>

    <string name="user_name">Username:</string>
    <string name="user_first_name">First Name:</string>
    <string name="user_last_name">Last Name:</string>
    <string name="user_email">Email:</string>
    <string name="delete_account">Delete Account</string>


    <string name="text_incoming_requests">Incoming Requests</string>
    <string name="text_outgoing_requests">Outgoing Requests</string>
    <string name="text_requests">Requests</string>
    <string name="text_add_contacts">Add Contacts</string>
    <string name="title_users_chat">Users in Chat</string>
    <string name="title_remove_user">Remove Users</string>
    <string name="action_remove_user">Remove user</string>

    <string name="header_additional_details">Today\'s Details</string>
    <string name="text_wind">Wind</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_dew_point">Dew Point</string>
    <string name="text_pressure">Pressure</string>
    <string name="text_uv_index">UV Index</string>
    <string name="text_sunrise">Sunrise</string>
    <string name="text_sunset">Sunset</string>
    <string name="text_cloudiness">Cloudiness</string>



</resources>