<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginFragment">

        <Switch
            android:id="@+id/switch_signin"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/switch_log_in"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_login"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/edit_register_email"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <Button
            android:id="@+id/button_login_login"
            android:layout_width="374dp"
            android:layout_height="60dp"
            android:layout_marginTop="35dp"
            android:text="@string/action_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_forgot" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Enter your password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/edit_register_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/edit_register_email"
            app:layout_constraintTop_toBottomOf="@+id/edit_register_email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/hint_need_account"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_login" />

        <TextView
            android:id="@+id/button_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/action_register"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/button_login_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/action_forgot"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="276dp"
            android:layout_height="191dp"
            android:src="@drawable/slapchatbig"
            app:layout_constraintBottom_toTopOf="@+id/edit_register_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout_wait" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_wait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button_login_forgot"
            app:layout_constraintEnd_toStartOf="@+id/button_login_login"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toEndOf="@+id/button_login_register"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>