<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".ui.settings.SettingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".ui.settings.SettingFragment">


        <TextView
            android:id="@+id/text_settings_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.086" />

        <Button
            android:id="@+id/button_settings_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_change_pass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_settings_email"
            app:layout_constraintVertical_bias="0.128" />

        <Button
            android:id="@+id/button_settings_delete"
            android:layout_width="173dp"
            android:layout_height="43dp"
            android:text="@string/delete_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_settings_colorPicker"
            app:layout_constraintVertical_bias="0.86" />

        <LinearLayout
            android:id="@+id/layout_settings_colorPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/button_settings_change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_settings_change"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/text_settings_orangeColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/orange"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_settings_redColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/red"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_settings_blueColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/blue_light"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_settings_greenColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/green_light"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_settings_uwColor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/uw_gold"
                android:drawableStart="@drawable/ic_setting_uw_50dp"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_settings_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_settings_settings" />

        <TextView
            android:id="@+id/text_settings_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_settings_username" />

        <TextView
            android:id="@+id/text_settings_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_settings_firstname" />

        <TextView
            android:id="@+id/text_settings_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_settings_lastname" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>